style: Fix height of homepage cards and hide horizontal scroll
style: Fix height of homepage cards and hide horizontal scroll

* Set the height of homepage cards to 80vh
* Hide the horizontal scroll bar in task list

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -62,7 +62,7 @@ div.tasks-card,
 div.tasks-add,
 div.calendar-card div.tasks-card,
 div.react-calendar {
-  height: 100%;
+  height: 80vh;
   padding: 1.5em;
   border-radius: 24px;
 }
@@ -73,7 +73,8 @@ div.card-title {
 
 div.task-list {
   border: none !important;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 div.task {
